# transcription-service

./: audio_utils.py  client.py  pyproject.toml  requirements.txt  serve_config.yaml  server.py  test_connectivity.py  test_transcription_fast.py
asr/: asr_factory.py  asr_interface.py  faster_whisper_asr.py  stream_server.py  whisper_asr.py
buffering_strategy/: buffering_strategies.py  buffering_strategy_factory.py  buffering_strategy_interface.py
vad/: pyannote_vad.py  vad_factory.py  vad_interface.py
