[project]
name = "transcription-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "pyannote-audio>=4.0.1",
    "pydantic>=2.12.0",
    "pydub>=0.25.1",
    "ray[serve]>=2.50.0",
    "soundfile>=0.13.1",
    "av==15.1.0",
    "coloredlogs==15.0.1",
    "ctranslate2==4.6.0",
    "faster-whisper==1.2.0",
    "flatbuffers==25.9.23",
    "humanfriendly==10.0",
    "onnxruntime==1.23.1",
    "tokenizers==0.22.1",
    "huggingface-hub>=0.35.3",
    "aiofiles>=25.1.0",
    "transformers>=4.57.0",
]
